fix vanta display on mobile view

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: "Red Hat Display", sans-serif;
+  background: #001e3c;
 }
 
 h1,
